# tello_controller

./: CMakeLists.txt  README.md  package.xml
cfg/: dynamic_gains.cfg  gains
docs/: captura_datos.xlsx
launch/: orb_slam2_tello_mono.launch  tello_control.launch  tello_driver_node.launch
msg/: system_vars_msg.msg
scripts/: PD.py  get_key_node.py  safe_copy_altitude_yaw.py  tello_control.py  tello_keyboard.py
